--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.967.0",
+    "@aws-sdk/s3-request-presigner": "^3.967.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.5.0",
-    "express-session": "^1.18.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
     "helmet": "^8.1.0",
     "lowdb": "^6.1.1",
-    "papaparse": "^5.5.3",
-    "bcryptjs": "^2.4.3"
+    "papaparse": "^5.5.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
